# chiloe-biodiversidad-mobile

./: .eslintignore  .gitignore  CLAUDE.md  README.md  app.json  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
android/: README.md  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  camera_ndk.cpp  camera_ndk.hpp  chiloe_camera_jni.cpp  exif_minimal.cpp  exif_minimal.hpp  jpeg_writer.cpp  jpeg_writer.hpp
android/app/src/main/java/cl/chiloe/biodiversidad/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/cl/chiloe/biodiversidad/camera/: ChiloeCameraModule.kt  ChiloeCameraPackage.kt
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
src/: App.tsx
src/api/: apiClient.ts  authApi.ts  avistamientosApi.ts  errors.ts  index.ts  speciesApi.ts
src/auth/: AuthContext.tsx  googleSignIn.ts  tokenStore.ts
src/config/: appConfig.ts
src/db/: connection.ts  mutationQueue.ts  schema.ts  speciesCache.ts  syncState.ts
src/db/__tests__/: mutationQueue.test.ts
src/native/: ChiloeCamera.ts
src/navigation/: AppNavigator.tsx
src/screens/: BibliotecaScreen.tsx  CameraScreen.tsx  EspecieDetailScreen.tsx  LoginScreen.tsx  PerfilScreen.tsx
src/styles/: theme.ts
src/sync/: initialSync.ts  mutationSync.ts
src/types/: avistamiento.ts  domain.ts
